# mcp-facture-electronique-fr

./: .env.example  .gitignore  README.md  RELEASE.md  config.py  pyproject.toml  server.json  server.py
.claude/: settings.local.json
.github/workflows/: publish.yml
audit/: audit_vs_core.py  report.json
clients/: __init__.py  directory_client.py  flow_client.py
specs/: README.md
tests/: __init__.py  test_directory.py  test_ereporting.py  test_flow.py  test_mcp_protocol.py
tools/: __init__.py  directory_tools.py  ereporting_tools.py  flow_tools.py
